fix wrap text di agenda

--- a/assets/agenda/custom.css
+++ b/assets/agenda/custom.css
@@ -28,3 +28,6 @@
   cursor: pointer;
   margin: 5px;
 }
+.wrap-text-agenda {
+  width: 100%;
+}
